nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: default
spec:
  selector:
    app: nginx-ingress
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30600
  type: NodePort
